force-app/main/default/objects/CascadeRule__mdt/CascadeRule__mdt.object-meta.xml
<CustomObject>
    <description>Cascade Rules</description>
    <label>Cascade Rule</label>
    <pluralLabel>Cascade Rules</pluralLabel>
</CustomObject>