force-app/main/default/objects/CascadeRule__mdt/fields/ChildFields__c.field-meta.xml
<CustomField>
    <fullName>ChildFields__c</fullName>
    <label>ChildFields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>