force-app/main/default/objects/CascadeRule__mdt/fields/ChildLookupField__c.field-meta.xml
<CustomField>
    <fullName>ChildLookupField__c</fullName>
    <label>ChildLookupField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>