force-app/main/default/objects/CascadeRule__mdt/fields/EnableUpdate__c.field-meta.xml
<CustomField>
    <fullName>EnableUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EnableUpdate</label>
    <type>Checkbox</type>
</CustomField>