force-app/main/default/objects/CascadeRule__mdt/fields/MasterObject__c.field-meta.xml
<CustomField>
    <fullName>MasterObject__c</fullName>
    <label>MasterObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>