force-app/main/default/objects/CascadeRule__mdt/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOFT_DELETE</fullName>
                <default>true</default>
                <label>SOFT_DELETE</label>
            </value>
            <value>
                <fullName>HARD_DELETE</fullName>
            </value>
            <value>
                <fullName>REASSIGN</fullName>
            </value>
            <value>
                <fullName>IGNORE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>