force-app/main/default/objects/CascadeRule__mdt/fields/ParentFields__c.field-meta.xml
<CustomField>
    <fullName>ParentFields__c</fullName>
    <label>ParentFields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>