force-app/main/default/objects/CascadeRule__mdt/fields/ReassignParentId__c.field-meta.xml
<CustomField>
    <fullName>ReassignParentId__c</fullName>
    <label>ReassignParentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>