force-app/main/default/objects/CascadeRule__mdt/fields/SoftDeleteField__c.field-meta.xml
<CustomField>
    <fullName>SoftDeleteField__c</fullName>
    <label>SoftDeleteField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>