force-app/main/default/objects/CascadeRule__mdt/fields/UpdateMapping__c.field-meta.xml
<CustomField>
    <fullName>UpdateMapping__c</fullName>
    <label>UpdateMapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>