force-app/main/default/objects/CascadeRule__mdt/listViews/Custom_View.listView-meta.xml
<ListView>
    <fullName>Custom_View</fullName>
    <columns>MasterLabel</columns>
    <columns>Mode__c</columns>
    <columns>MasterObject__c</columns>
    <columns>ChildObject__c</columns>
    <columns>ChildLookupField__c</columns>
    <columns>ParentFields__c</columns>
    <columns>ChildFields__c</columns>
    <columns>ReassignParentId__c</columns>
    <columns>SoftDeleteField__c</columns>
    <columns>EnableUpdate__c</columns>
    <columns>UpdateMapping__c</columns>
    <filterScope>Everything</filterScope>
    <label>Custom View</label>
    <language>en_US</language>
</ListView>